# channel-dark

./: .gitignore  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  config_manager.py  docker-compose.yml  example_tiktok_usage.py  main.py  pyproject.toml  tiktokxUZgJIHYk586V2zzySy4LBN6DTubONKz.txt
src/channels/: publish_shorts.py  retriver_info.py
src/cron_job/: manager.py
src/download/: youtube.py
tiktok-verification/: tiktokCbA1bMpjiAgdU2xveH7WbvNQlWWy98Gl.txt  tiktokVV3Najn2vfVYlj0Rmx4nfctLORktQxxc.txt
